--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,173 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+
+:root {
+  --baby-blue: #82d1f1;
+  --blue-jeans: #5dbae8;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  font-family: 'Ubuntu', sans-serif;
+  line-height: 1.8rem;
+  color: #111;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+#err-msg {
+  display: none;
+}
+
+.App {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr 1fr;
+  height: 100vh;
+}
+
+/* Posts */
+#posts {
+  grid-column: 5/11;
+  grid-row: 1/3;
+  background-color: var(--blue-jeans);
+  margin: 5px;
+  padding: 20px;
+  overflow-y: scroll;
+}
+
+#posts h1,
+#posts h3 {
+  text-align: center;
+}
+
+.post {
+  padding: 10px 20px 50px 20px;
+  margin-bottom: 20px;
+  background-color: var(--baby-blue);
+  position: relative;
+  overflow-wrap: break-word;
+}
+
+.btn-delete {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  margin: 10px;
+  padding: 5px 10px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.btn-delete:hover {
+  background-color: var(--blue-jeans);
+}
+
+/* Hobbies */
+#hobbies {
+  grid-column: 11/13;
+  grid-row: 1/2;
+  background-color: var(--blue-jeans);
+  padding: 0 20px;
+  margin: 5px;
+  text-align: center;
+  overflow-y: scroll;
+  overflow-wrap: break-word;
+}
+
+/* Places */
+#places {
+  grid-column: 11/13;
+  grid-row: 2/3;
+  background-color: var(--blue-jeans);
+  padding: 0 20px;
+  margin: 5px;
+  text-align: center;
+  overflow-y: scroll;
+  overflow-wrap: break-word;
+}
+
+#hobbies li,
+#places li {
+  cursor: pointer;
+  margin: 5px 0;
+}
+
+#hobbies li:hover,
+#places li:hover {
+  text-decoration: line-through;
+}
+
+/* Form */
+input,
+textarea {
+  padding: 5px 10px;
+  width: 100%;
+  margin-bottom: 10px;
+  border: none;
+  outline: none;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+  border: none;
+}
+
+.btn-submit:hover {
+  background-color: var(--baby-blue);
+}
+
+.btn-others {
+  width: 50%;
+}
+
+#add-post {
+  grid-column: 1/5;
+  grid-row: 1/2;
+  background-color: var(--blue-jeans);
+  padding: 0 20px;
+  margin: 5px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#add-post textarea {
+  flex: 1;
+}
+
+#add-others {
+  grid-column: 1/5;
+  grid-row: 2/3;
+  background-color: var(--blue-jeans);
+  padding: 10px 20px;
+  margin: 5px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+#add-others input[type='text'] {
+  text-align: center;
+}
+
+@media screen and (max-width: 1000px) {
+  #err-msg {
+    display: block;
+  }
+
+  .App {
+    display: none;
+  }
 }
